# distributed-deduplication

./: Cargo.toml  Dockerfile  README.md  build.rs
examples/: self_rep.rs
kubernetes/: pvc.yaml  rdev.yaml  self_rep.yaml
kubernetes/kubectl_proxy/: Dockerfile
proto/: dedup.proto
src/: collections.rs  lib.rs  mydedup.rs
src/k8s/: api.rs  metrics.rs
