[package]
name = "rudders"
version = "0.1.0"
authors = ["joshua postel"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


#[[bin]]
#name = "dedup-server"
#path = "src/server.rs"

#[[bin]]
#name = "dedup-client"
#path = "src/client.rs"

# TODO upgrade to tokio 1, tonic 0.4 once resolved: https://github.com/hyperium/tonic/issues/540
[dependencies]
log = "0.4"
simple_logger = "1.11.0"
serde = { version = "1.0.119", features = ["derive"] }
bincode = "1.3.1"
tonic = "0.3.1"
prost = "0.6"
tokio = { version = "0.2", features = ["full"] }
async-trait = "0.1.42"
bytes = "1.0.0"
#reqwest = { version = "0.11.0", features = ["json"] } tokio 1.0 blocker
reqwest = { version = "0.10.0", features = ["json"] }
serde_json = "1.0.61"
serde_yaml = "0.8.15"
rand = "0.7.3"
#kube = "0.48.0"
#k8s-openapi = { version = "0.11.0", features = ["v1_18"] }
kube = "0.40.0"
k8s-openapi = { version = "0.9.0", features = ["v1_18"] }
futures-util = "0.3.12"
futures = "0.3"
http = "0.2.3"

[build-dependencies]
tonic-build = "0.3.1"
